# neuralnets

./: Cargo.toml  README.md
data/: .gitignore
data/rps/: EMGdata-RPS-04231538.mat  EMGdata-RPS-04231542.mat  EMGdata-RPS-04231545.mat  EMGdata-RPS-04231549.mat  EMGdata-RPS-04231553.mat  EMGdata-RPS-04231556.mat  EMGdata-RPS-04231559.mat  README.md
examples/: cnn.rs  conv.rs  importmat.rs  linear.rs  minstnn.rs  simple_ltsm.rs  simple_nn.rs  simple_rnn.rs
py/: emg_data.py  rnn.py
src/: experiment.rs  lib.rs  plots_old.rs  utils.rs
src/plots/: line2d.rs  mod.rs  scatter2d.rs
